@@ -1,5 +1,7 @@
 [+] Current code:
     - CMakeLists file performed (thanks antoniojars!!)
+    - Solved problems with some launchers (with %U, %c...) and added support for
+      elastic cursor on launch and similar effects.
 
 
 [+] Takeoff v0.1.5 (2011/08/01)
